# cubeRotation

./: .gitignore  CMakeLists.txt  README.md  assignment.pro  cubeRotation.pro
buildQt/: assignment
cubeRotation/: cubeRotation.pro
forms/: linerotationdialog.ui  mainwindow.ui  viewpositiondialog.ui
include/: linerotationdialog.hpp  mainview.hpp  mainwindow.hpp  scene.hpp  scenebasic.hpp  viewpositiondialog.hpp
shader/: basic.frag  basic.vert
src/: linerotationdialog.cpp  main.cpp  mainview.cpp  mainwindow.cpp  viewpositiondialog.cpp
